--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- py-script cdn -->
-    <link rel="stylesheet" href="https://pyscript.net/releases/2025.7.3/core.css">
-    <script type="module" src="https://pyscript.net/releases/2025.7.3/core.js"></script>
-    <!-- bootstrap cdn -->
+     <!-- PY LINK -->
+     <link rel="stylesheet" href="https://pyscript.net/releases/2024.1.1/core.css">
+    <script type="module" src="https://pyscript.net/releases/2024.1.1/core.js"></script>
+
+    <!-- BS LINK -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- FONT 1 -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="style.css">
     <title>Student Grade Calculator</title>
 </head>
 <body>
 
+<div class="container mt-5">
 <form>
-    <h1>Student Grade Calculator</h1>
+    <h1>Student Grade <br> Calculator</h1>
     <label for="name">First Name:</label><br>
     <input type="text" id="fname">
     <br><br>
@@ -23,32 +32,45 @@
     <input type="text" id="lname">
     <br><br>
 </form>
+</div>
 
+<div class="container mt-3">
 <form>
-    <h3>Enter Your Grades</h3>
-    <label for="name">English</label>
+    <h2>Enter Your Grades</h2>
+    <label for="name">English</label><br>
     <input type="number" id="english"><br>
 
-    <label for="name">Math</label>
+    <label for="name">Math</label><br>
     <input type="number" id="math"><br>
 
-    <label for="name">Social Studies</label>
+    <label for="name">Social Studies</label><br>
     <input type="number" id="ss"><br>
 
-    <label for="name">Music</label>
+    <label for="name">Music</label><br>
     <input type="number" id="music"><br>
 
-    <label for="name">PE</label>
+    <label for="name">Physical Education</label><br>
     <input type="number" id="pe"><br>
 
-    <label for="name">VE</label>
+    <label for="name">Values Education</label><br>
     <input type="number" id="ve"><br>
 </form>
 
-<br><br>
-<input type="button" py-click="student_gwa" value="Calculate GWA">
+<br>
+<input type="button" class="button" py-click="student_gwa" value="Calculate GWA">
+</div>
+
+<br>
+<div class="header">
+<div id="output"></div>
+</div>
+</div>
+<py-script src="main.py"></py-script>
+</body>
+</html>
 
 <div id="output"></div>
 <py-script src="main.py"></py-script>
 </body>
+
 </html>
